--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     </head>
     <body>
         <div class="container">
-            <img src="images/sunset-nature-minimal-hd-wallpaper.jpg" alt="Sunset" width="840" height="200" style="width:100%;">
+            <img src="/images/sunset-nature-minimal-hd-wallpaper.jpg" alt="Sunset" width="840" height="200" style="width:100%;">
             <div class="centered">A Week In Vancouver, BC</div>
         </div> 
         
@@ -26,7 +26,7 @@
         <h2>Points of Interest & Photo Gallery</h2>
 
         <div>
-            <img src="images/Chief40.JPG" alt="Mountain View" width="940" height="493">
+            <img src="/images/Chief40.JPG" alt="Mountain View" width="940" height="493">
         </div>
         <div id="pageContainer">
             <div class="column">
