--- a/index.html
+++ b/index.html
@@ -21,9 +21,11 @@
                 <li><a href="aboutme.html" >ABOUT ME</a></li>
             </ul>
         </div>
-            
-        <h2>Sharing my Canadian West Coast trip with you.</h2>
-        <h2>Points of Interest & Photo Gallery</h2>
+
+        <header>
+            <h2>Sharing my Canadian West Coast trip with you.</h2>
+            <h2>Points of Interest & Photo Gallery</h2>
+        </header>
 
         <div>
             <img src="/images/Chief40.JPG" alt="Mountain View" width="940" height="493">
