--- a/gallery.html
+++ b/gallery.html
@@ -12,7 +12,7 @@
 
 		<div class="container">
 			<img src="images/vector-beach-sunset-illustration.jpg" alt="Sunrise" width="840" height="200" style="width:100%;">
-			<div class="centered"> Gallery </div>
+			<div class="centered"> <b>Gallery </b></div>
 		  </div> 
 		
 			<div class="nav">
