--- a/index.html
+++ b/index.html
@@ -12,9 +12,8 @@
         <header>
         <div class="container">
             <img src="./images/sunset-nature-minimal-hd-wallpaper.jpg" alt="Sunset" width="840" height="200" style="width:100%;">
-            <div class="centered">A Week In Vancouver, BC</div>
+            <div class="centered"><b>A Week In Vancouver, BC</b></div>
         </div> 
-        
         <div class="nav">
             <ul>
                 <li><a href="index.html" >HOME</a></li>
