--- a/aboutme.html
+++ b/aboutme.html
@@ -37,7 +37,7 @@
 
 	<div class="container">
 		<img src="images/sunset-desert-dunes-minimal-wallpaper.jpg" alt="Sun" width="840" height="200" style="width:100%;">
-		<div class="centered"> All About Me Myself and I </div>
+		<div class="centered"><b> All About Me Myself and I </b></div>
   	</div> 
 
 	<div class="nav">
